[package]
name = "ace"
version = "0.1.0"
authors = ["Cactus <thecactusblue@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = "0.6.1"
cranelift = "0.58.0"
cranelift-codegen = "0.58.0"
cranelift-frontend = "0.58.0"
cranelift-module = "0.58.0"
cranelift-simplejit = "0.58.0"
